# rnet

./: .gitignore  README  README.md
res/: rnet1000-el.txt
src/: CMakeConfig.h.in  CMakeLists.txt  config.cpp  config.h  logo.cpp  logo.h  net.txt  rnet.cpp  utils.cpp  utils.h
